@@ -4,6 +4,7 @@ import fr.samyseb.hotelservice.entities.Chambre;
 import fr.samyseb.hotelservice.entities.Hotel;
 import fr.samyseb.hotelservice.repositories.ChambreRepository;
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.DependsOn;
 import org.springframework.core.env.Environment;
@@ -12,9 +13,8 @@ import org.springframework.stereotype.Service;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.List;
-import java.util.Random;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
@@ -32,8 +32,8 @@ public class ChambreService {
         Random random = new Random();
         Hotel hotel = hotelService.identity(); // Obtenez l'instance de l'hôtel
 
-        // Liste des noms de fichiers d'images
-        List<byte[]> imageNames = Stream.of("0935_ho_00_p_1024x768.jpg",
+        // Liste modifiable des noms de fichiers d'images
+        List<String> imagePaths = new ArrayList<>(Arrays.asList("0935_ho_00_p_1024x768.jpg",
                 "101525.jpg",
                 "6257f19fbb069d0e7b8a65e9.jpg",
                 "bedroom-1285156_1280.jpg",
@@ -49,7 +49,12 @@ public class ChambreService {
                 "lapland-4688326_1280.jpg",
                 "to-travel-1677347_1280.jpg",
                 "upholstery-4809588_1280.jpg"
-        ).map(s -> "/imgChambres/" + s).map(this::readImageAsBytes).toList();
+        ));
+
+        List<byte[]> imageNames = imagePaths.stream()
+                .map(s -> "/imgChambres/" + s)
+                .map(this::readImageAsBytes)
+                .collect(Collectors.toList());
 
 
         // Vérifier si suffisamment d'images sont disponibles
@@ -63,18 +68,21 @@ public class ChambreService {
 
             // Sélectionnez une image aléatoire pour chaque chambre
             int imageIndex = random.nextInt(imageNames.size());
+            byte[] image = imageNames.get(imageIndex);
+            imageNames.remove(imageIndex);
+
             chambreRepository.save(Chambre.builder()
                     .id(UUID.randomUUID())
                     .numero(i + 100)
                     .prix(prix)
                     .places(places)
                     .hotel(hotel)
-                    .image(imageNames.get(imageIndex))  // Attribuer l'image à la chambre
+                    .image(image)
                     .build());
         }
     }
 
-    @PostConstruct
+    @PreDestroy
     public void removeChambres() {
         chambreRepository.deleteAllByHotel(hotelService.identity());
     }
